--- a/tutorial.html
+++ b/tutorial.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/custom.css">
 
     <!-- Page Title -->
-    <title>Nick Citizen | Awesome Interaction Designer</title>
+    <title>Nicholas Ho | Awesome Interaction Designer</title>
 
     <!-- This is our Meta Description -->
     <meta name="description" content="What you write here will often show up in search results under the page title">
